--- a/src/app/components/company/iregister-company/iregister-company.component.html
+++ b/src/app/components/company/iregister-company/iregister-company.component.html
@@ -11,7 +11,8 @@
                     <input type="email" id="correo" name="correo" placeholder="Correo Electrónico" required>
                     <input type="number" id="telefono" name="telefono" placeholder="Teléfono" required>
                     <input type="text" id="estado" name="estado" placeholder="Estado" required>
-                    <input type="text" id="ciudad" name="ciudad" placeholder="Ciudad/Municipio" required>
+                    <input type="text" id="ciudad" name="ciudad" placeholder="Ciudad" required>
+                    <input type="text" id="municipio" name="municipio" placeholder="Municipio" required>
                     <input type="password" id="contrasena" name="contrasena" placeholder="Contraseña" required>
                     <input type="password" id="confirmarContrasena" name="confirmarContrasena" placeholder="Confirmar Contraseña" required>
                 </div>
