--- a/src/app/components/company/dialog-materialrequest/dialog-addmaterialrequest/dialog-addmaterialrequest.component.html
+++ b/src/app/components/company/dialog-materialrequest/dialog-addmaterialrequest/dialog-addmaterialrequest.component.html
@@ -1,30 +1,48 @@
 <div class="dialog-container">
-  <h2 class="solicitud-titulo">Agregar Materiales</h2>
+  <h2 class="solicitud-titulo">Agregar Solicitud de Material</h2>
   <div class="input-container">
-    <select id="name" class="input-field" required>
-      <option value="" disabled selected>Selecciona un producto</option>
-      <option value="producto1">Producto 1</option>
-      <option value="producto2">Producto 2</option>
-      <option value="producto3">Producto 3</option>
-      <!-- Agrega más opciones según sea necesario -->
+    <select id="name" class="input-field" [(ngModel)]="selectedMaterial" required>
+      <option value="" disabled selected>Selecciona un material</option>
+      <option *ngFor="let material of materials" [value]="material.id_material">
+        {{ material.nombre_material }}
+      </option>
     </select>
   </div>
   <div class="input-container">
-    <input type="number" id="price" class="input-field" placeholder="Precio" required />
+    <input
+      type="number"
+      id="quantity"
+      class="input-field"
+      [(ngModel)]="formData.cantidad_solicitada"
+      placeholder="Cantidad solicitada"
+      required
+    />
   </div>
   <div class="input-container">
-    <input type="number" id="quantity" class="input-field" placeholder="Cantidad Mínima (Kg)" required />
+    <input
+      type="number"
+      id="price"
+      class="input-field"
+      [(ngModel)]="formData.precio"
+      placeholder="Precio"
+      required
+    />
   </div>
   <div class="input-container">
-    <textarea id="description" class="input-field" placeholder="Descripción"></textarea>
+    <textarea
+      id="description"
+      class="input-field"
+      [(ngModel)]="formData.descripcion"
+      placeholder="Descripción"
+    ></textarea>
   </div>
   <div class="input-container">
     <div class="file-container">
-      <input type="file" id="fotos" class="file-input" />    
+      <input type="file" id="fotos" class="file-input" (change)="onFileChange($event)" />
     </div>
   </div>
   <div class="button-container">
     <button type="button" class="close-button" (click)="closeDialog()">Cerrar</button>
-    <button type="submit" class="add-button">Agregar</button>
+    <button type="submit" class="add-button" (click)="onSubmit()">Agregar</button>
   </div>
 </div>
