--- a/src/app/components/users/header-users/header-users.component.html
+++ b/src/app/components/users/header-users/header-users.component.html
@@ -1,7 +1,7 @@
 <header class="header">
     <div class="back">
         <div class="menu container">
-            <a href="*"><img src="images/logo2.png" alt=""  class="logo"></a>
+            <a routerLink="" routerLinkActive="active"><img src="images/logo2.png" alt=""  class="logo"></a>
             <input type="checkbox" id= "menu">
             <label for="menu">
                 <img src="images/menu.png" alt="" width="25px">
